--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
     <picture>
         <source media="(min-width: 768px)" srcset="assets/dan-droids.png">
-        <img src="assets/dan-droids-pq.png" alt="Dandroids">
+        <img src="assets/dan-droids-pq.png" alt="Dandroids" class="dandroids">
     </picture>
     <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
     <h2>Surge um novo mascote</h2>
     <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
     <picture>
         <source media="(min-width: 768px)" srcset="assets/irina-blok.jpg">
-        <img src="assets/irina-blok-pq.jpg" alt="Irina Blok">
+        <img src="assets/irina-blok-pq.jpg" alt="Irina Blok" class="irina">
     </picture>
     <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
-    <img src="assets/bugdroid.png" alt="Bugdroid">
+    <img src="assets/bugdroid.png" alt="Bugdroid" class="bugdroid">
     <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
     
     <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
