--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
 </article>
 <footer>
-    <p>Site criado por Ícaro Soares para o CursoemVideo.</p>
+    <p>Site criado por <a href="#">Ícaro Soares</a> para o <a href="#">CursoemVideo</a>.</p>
 </footer>
 </body>
 </html>
