--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
     <img src="assets/bugdroid.png" alt="Bugdroid" class="bugdroid">
     <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
-    
     <div><iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-    
     <aside>
         <h3>Quer aprender mais?</h3>
         <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
@@ -64,7 +62,7 @@
     <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
 </article>
 <footer>
-    <p>Site criado por <a href="#">Ícaro Soares</a> para o <a href="#">CursoemVideo</a>.</p>
+    <p>Site criado por <a href="#">Ícaro Soares</a> para o <a href="#">CursoemVideo</a></p>
 </footer>
 </body>
 </html>
